unpackaged/main/default/objects/EmployeeNoteRule__c/EmployeeNoteRule__c.object-meta.xml
<CustomObject>
    <label>Employee Note Rule</label>
    <nameField>
        <label>EmployeeNoteRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Note Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>