unpackaged/main/default/objects/EmployeeNoteRule__c/fields/Code_Nace__c.field-meta.xml
<CustomField>
    <fullName>Code_Nace__c</fullName>
    <label>Code Nace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>