unpackaged/main/default/objects/EmployeeNoteRule__c/fields/Maximum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Percentage__c</fullName>
    <label>Maximum Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>