unpackaged/main/default/objects/EmployeeNoteRule__c/fields/Minimum_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Percentage__c</fullName>
    <label>Minimum Percentage</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>