unpackaged/main/default/objects/EmployeeNoteRule__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>