unpackaged/main/default/objects/EmployeeNoteRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code_Nace__c</columns>
    <columns>Maximum_Percentage__c</columns>
    <columns>Minimum_Percentage__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Nace__c</field>
        <operation>equals</operation>
        <value>4690</value>
    </filters>
    <label>All</label>
</ListView>