unpackaged/main/default/objects/EmployeeNoteRule__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Note__c</columns>
    <columns>Minimum_Percentage__c</columns>
    <columns>Maximum_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_Nace__c</field>
        <operation>equals</operation>
        <value>9104</value>
    </filters>
    <label>Tout</label>
</ListView>